fix(course-detail): modal spaces on mobile

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -50,5 +50,10 @@
 @media screen and (max-width: 768px) {
     .modal-content {
         border-radius: 0;
+        padding: 24px 16px 40px;
+    }
+
+    .modal-header h4 {
+        max-width: 310px;
     }
 }
